--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>maniema-new-city-radio</title>
-    <meta name="description" content="Lovable Generated Project" />
+    <title>Radio Communautaire Maniema New City</title>
+    <meta name="description" content="Émettant depuis Kindu, le chef-lieu de la province du Maniema, sur la fréquence 97.4 MHz, Maniema New City atteint tous les coins de la province en étant représentée dans les 7 territoires : Kasongo, Kailo, Kabambare, Kibombo, Punia, Pangi, et Lubutu. Notre engagement est de fournir des informations fiables et équilibrées, non seulement locales, mais aussi internationales.
+" />
     <meta name="author" content="Lovable" />
 
-    <meta property="og:title" content="maniema-new-city-radio" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Radio Communautaire Maniema New City" />
+    <meta property="og:description" content="Émettant depuis Kindu, le chef-lieu de la province du Maniema, sur la fréquence 97.4 MHz, Maniema New City atteint tous les coins de la province en étant représentée dans les 7 territoires : Kasongo, Kailo, Kabambare, Kibombo, Punia, Pangi, et Lubutu. Notre engagement est de fournir des informations fiables et équilibrées, non seulement locales, mais aussi internationales.
+" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
