--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <meta property="og:description" content="Émettant depuis Kindu, le chef-lieu de la province du Maniema, sur la fréquence 97.4 MHz, Maniema New City atteint tous les coins de la province en étant représentée dans les 7 territoires : Kasongo, Kailo, Kabambare, Kibombo, Punia, Pangi, et Lubutu. Notre engagement est de fournir des informations fiables et équilibrées, non seulement locales, mais aussi internationales.
 " />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/public/lovable-uploads/6c5a1a81-d187-4ef3-a865-11492f0b9f9a.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/public/lovable-uploads/6c5a1a81-d187-4ef3-a865-11492f0b9f9a.png" />
   </head>
 
   <body>
